fix(ci): fix linting, tests and types for dashboard launch
