# apps/backend/src/swagger.json
@@ -77,32 +77,12 @@
         "type": "object",
         "description": "From T, pick a set of properties whose keys are in the union K"
       },
+      "Omit_Appointment.id-or-status_": {
+        "$ref": "#/components/schemas/Pick_Appointment.Exclude_keyofAppointment.id-or-status__",
+        "description": "Construct a type with the properties of T except for those in type K."
+      },
       "AppointmentCreationParams": {
-        "properties": {
-          "customerName": {
-            "type": "string"
-          },
-          "customerPhone": {
-            "type": "string"
-          },
-          "service": {
-            "type": "string"
-          },
-          "date": {
-            "type": "string"
-          },
-          "duration": {
-            "type": "number",
-            "format": "double"
-          },
-          "price": {
-            "type": "number",
-            "format": "double"
-          }
-        },
-        "required": ["customerName", "customerPhone", "service", "date", "duration", "price"],
-        "type": "object",
-        "additionalProperties": false
+        "$ref": "#/components/schemas/Omit_Appointment.id-or-status_"
       }
     },
     "securitySchemes": {}
